--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -8,17 +8,41 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~38.0.8",
-    "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.9.1",
+    "@react-navigation/drawer": "^5.9.2",
+    "@react-navigation/native": "^5.7.5",
+    "@react-navigation/stack": "^5.9.2",
+    "@reduxjs/toolkit": "^1.4.0",
+    "axios": "^0.20.0",
+    "expo": "^38.0.0",
+    "expo-status-bar": "^1.0.0",
+    "formik": "^2.1.7",
+    "lodash": "^4.17.20",
+    "react": "16.11.0",
+    "react-devtools": "^4.8.2",
+    "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^4.2.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-tailwindcss": "^1.1.10",
+    "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.1",
+    "redux-saga": "^1.1.3",
+    "url": "^0.11.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.41",
+    "@types/lodash": "^4.14.161",
+    "@types/react": "^16.9.50",
     "@types/react-native": "~0.62.13",
+    "@types/react-redux": "^7.1.9",
+    "@types/yup": "^0.29.7",
+    "react-native-svg-transformer": "^0.14.3",
     "typescript": "~3.9.5"
   },
   "private": true
